--- a/ViennaAdvantage/Areas/VA003/Contents/OrgStructure.css
+++ b/ViennaAdvantage/Areas/VA003/Contents/OrgStructure.css
@@ -86,11 +86,13 @@ ul.VA003-topLeft-icons {
     list-style: none;
 }
 
-    ul.VA003-topLeft-icons > li, ul.VA003-topRight-icons > li {
-        float: left;
-        margin-right: 8px;
-        cursor: pointer;
-    }
+ul.VA003-topLeft-icons > li, 
+ul.VA003-topRight-icons > li, 
+ul.VA003-RightTreetopRight-icons > li {
+    float: left;
+    margin-right: 8px;
+    cursor: pointer;
+}
 
         ul.VA003-topLeft-icons > li > a, ul.VA003-root-node > li > a, ul.VA003-root-node > li ul > li > a {
             border-radius: 3px;
@@ -106,11 +108,7 @@ ul.VA003-topLeft-icons {
             color: #fff;
         }
 
-         ul.VA003-topLeft-icons > li, ul.VA003-RightTreetopRight-icons > li {
-        float: left;
-        margin-right: 8px;
-        cursor: pointer;
-    }
+
 
         ul.VA003-RightTreetopRight-icons > li > a {
             border-radius: 3px;
@@ -291,7 +289,7 @@ span.VA003-collapse-icon {
     float: left;
     /*border-right: 1px solid #abbcc3;*/
     height: 100%;
-    padding: 15px;
+    padding: 0 15px;
     position: relative;
     /*padding-bottom:65px;*/
 }
@@ -302,7 +300,7 @@ span.VA003-collapse-icon {
     float: left;
     border-right: 1px solid #abbcc3;
     height: 100%;
-    padding: 15px;
+    padding: 0 15px;
     position: relative;
     /*padding-bottom:65px;*/
 }
